tests/baselines/reference/typeReferenceDirectives1(strict=true).errors.txt
/types/lib/index.d.ts(1,15): error TS7008: Member 'x' implicitly has an 'any' type.


==== /app.ts (0 errors) ====
    /// <reference types="lib" preserve="true" />
    interface A {
        x: $
    }
==== /types/lib/index.d.ts (1 errors) ====
    interface $ { x }
                  ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    